add scala version on artifactId (#1253)